@@ -12,19 +12,19 @@ kohtml_bin_SOURCES = kohtml_main.cc kohtml_doc.cc kohtml_view.cc \
 	kohtml_shell.cc kohtml.cc khtmlwidget_patched.cc khtmlview_patched.cc \
 	kfileio.cc kpropcheck.cc kpropcolor.cc kpropcombo.cc kpropdlg.cc \
 	kpropfont.cc kpropgroup.cc kpropradio.cc kpropspin.cc kproptext.cc \
-	settingsdlg.cc edithtmldlg.cc kohtmljob.cc
+	settingsdlg.cc edithtmldlg.cc kohtmljob.cc openurldlg.cc
 
 noinst_HEADERS = kohtml_main.h kohtml_doc.h kohtml_view.h kohtml_shell.h \
 	kohtml.h khtmlwidget_patched.h khtmlview_patched.h kfileio.h \
 	kpropcheck.h kpropcolor.h kpropcombo.h kpropdlg.h kpropfont.h \
 	kpropgroup.h kpropradio.h kpropspin.h kproptext.h settingsdlg.h \
-	edithtmldlg.h kohtmljob.h
+	edithtmldlg.h kohtmljob.h openurldlg.h
 
 METASOURCES = kohtml_main.moc kohtml_view.moc kohtml_shell.moc kohtml_doc.moc \
 	khtmlwidget_patched.moc khtmlview_patched.moc kpropcheck.moc \
 	kpropcolor.moc kpropcombo.moc kpropdlg.moc kpropfont.moc kpropgroup.moc \
 	kpropradio.moc kpropspin.moc kproptext.moc settingsdlg.moc edithtmldlg.moc \
-	kohtmljob.moc
+	kohtmljob.moc openurldlg.moc
 
 DISTCLEANFILES = $(idl_DATA:.idl=.cc) $(idl_HEADERS) $(METASOURCES)
 
@@ -53,7 +53,7 @@ kohtml.h: kohtml.idl
 
 kkohtml.cc: kohtml.h
 kohtml_view.cc: kohtml.h settingsdlg.h
-kohtml_shell.cc: kohtml.h 
+kohtml_shell.cc: kohtml.h openurldlg.h
 kohtml_doc.cc: kohtml.h kfileio.h
 kohtml_main.cc:  kohtml.h
 kfileio.cc: kfileio.h
@@ -71,3 +71,4 @@ kproptext.cc: kproptext.h
 settingsdlg.cc: settingsdlg.h 
 edithtmldlg.cc: edithtmldlg.h 
 kohtmljob.cc: kohtmljob.h 
+openurldlg.cc: openurldlg.h
