@@ -60,3 +60,15 @@ Thu Jan 14 22:11:14 1999 Simon Hausmann <tronical@gmx.net>
         * fixes (for example that error dialog now doesn't pop up anymore on startup)
 
         * rearranged menu
+
+Tue Jan 19 19:27:51 1999 Simon Hausmann <tronical@gmx.net>
+
+        * added nice open url dialog (file menu)
+
+        * tiny fix in the html editor
+
+        * started implementing cache system
+
+        * fixes with the configuration stuff
+
+        * several bug fixes I forgot ;-)
